[workspace]
members = ["macros", "."]

[package]
name = "leptos_reactive_axum"
version = "1.0.1"
edition = "2021"
description = "reactive context for axum handlers"
authors = ["DavidOnTop <me@davidon.top>"]
readme = "README.md"
documentation = "https://docs.rs/leptos_reactive_axum"
license = "MIT"
repository = "https://github.com/davidon-top/leptos_reactive_axum.git"

[dependencies]
leptos_reactive_axum_macros = { path = "./macros", version = "1", optional = true }
leptos_reactive = { version = "0.6", features = ["ssr"] }
axum = "0.7"
scopeguard = "1.2.0"
thiserror = "1.0.61"
http = "1.1.0"
tower = { version = "0.4.13", optional = true }

[features]
default = ["middleware"]
nightly = ["leptos_reactive/nightly"]
macros = ["dep:leptos_reactive_axum_macros"]
middleware = ["dep:tower"]

[dev-dependencies]
axum-test = "15.1.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
