[package]
name = "leptos_reactive_axum_macros"
version = "0.1.0"
edition = "2021"
description = "reactive context for axum handlers"
authors = ["davidontop <me@davidon.top>"]
readme = "../README.md"
documentation = "https://docs.rs/leptos_reactive_axum_macros"
license = "MIT"
repository = "https://git.davidon.top/public/leptos_reactive_axum.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
