[package]
name = "leptos_reactive_axum_macros"
version = "1.0.1"
edition = "2021"
description = "reactive context for axum handlers"
authors = ["DavidOnTop <me@davidon.top>"]
readme = "../README.md"
documentation = "https://docs.rs/leptos_reactive_axum_macros"
license = "MIT"
repository = "https://github.com/davidon-top/leptos_reactive_axum.git"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
